fix number constants (int vs float)